feat: Academy, Intern, Document Processing - Figma audit, close buttons, MEMBERS role, CSS consistency, Calendar for TC/MEMBERS, revert TA_Manager rename